# android-vulkan

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/hlsl/: aces.hlsl  average_brightness.cs  blinn-phong-analytic.ps  blinn-phong-lut.ps  blinn_phong_analytic.ps  blinn_phong_analytic.ps.hlsl  blinn_phong_gamma.ps  blinn_phong_gamma.ps.hlsl  blinn_phong_lut.ps  blinn_phong_lut.ps.hlsl  brightness_factor.hlsl  brightness_factor.ps  brightness_factor.ps.hlsl  color_packing.hlsl  color_space.hlsl  color_space.ps  common-opaque.vs  common_opaque.vs  common_opaque.vs.hlsl  dummy.vs.hlsl  dummy_gbuffer.ps  dummy_gbuffer.ps.hlsl  dummy_light.ps  dummy_light.ps.hlsl  exposure.cs  exposure.cs.hlsl  exposure.hlsl  full_screen_triangle.inc  full_screen_triangle.vs  full_screen_triangle.vs.hlsl  gbuffer_render_targets.hlsl  gbuffer_render_targets.ps  gbuffer_render_targets.ps.hlsl  geometry-pass.ps  geometry_pass.hlsl  geometry_pass.ps  geometry_pass.ps.hlsl  instance-layout.inc  instance-layout.vs  light-volume.vs  (+84 more)
app/src/main/profiling/: results.ods
docs/: 3ds-max-exporter.md  aaudio-issues.md  about-NDK-25.0.8775105.md  about-c++20-and-pedantic.md  actor.md  algorithms.md  animation-blend-node.md  animation-graph.md  animation-player-node.md  auto-exposure.md  av-logger.md  bit-field.md  camera-component.md  cpu-tracing.md  data-compression.md  div_ui_element.md  documentation.md  editor.md  gx-mat3.md  gx-mat4.md  gx-quat.md  gx-vec3.md  gx-vec4.md  html-validator.md  image-ui-element.md  input-event.md  logcat.md  logger.md  lua-api.md  lua-scripting-frontend.md  material.md  preprocessor-macros.md  proper-ui.md  release-build.md  renderdoc-integration.md  rigid-body-component.md  scene.md  script-component.md  shader-compilation.md  skeletal-mesh-component.md  (+13 more)
docs/arm-neon/: matrix-multiplication.odt
docs/images/: 3ds-max-plugin.xcf  engine-events.xcf  ui-text-blending.xcf
docs/sources/: controller-layout.xcf  engine-events.odt  engine-events.xcf
gradle/wrapper/: gradle-wrapper.properties
scripts/windows/: count-loc.ps1  disassm.ps1  make-all.ps1  make-env.ps1  make-spv.ps1  validate.ps1
tools/3ds-max-plugin/: 3ds-max-plugin.sln  3ds-max-plugin.slnx  3ds-max-plugin.vcxproj  3ds-max-plugin.vcxproj.filters
tools/3ds-max-plugin/include/: animation_exporter.hpp  bone_data_exporter.hpp  class_desc.hpp  exporter.hpp  mesh_exporter.hpp  plugin.hpp  resource.hpp  result_checker.hpp  skeleton_exporter.hpp  skin_exporter.hpp  utility.hpp  version.hpp
tools/3ds-max-plugin/include/3ds_max_sdk/: 3dsmaxconfig.h  AnimProperty.h  AnimPropertyList.h  Animatable.h  AnimatableFlags.h  AnimatableInterfaceIDs.h  BuildWarnings.h  CoreExport.h  DataClassDesc.h  DefaultActions.H  EditParamFlags.h  ExcludeListConstants.h  FileEnumConstants.h  GetCOREInterface.h  INodeTransformModes.h  MaxDirectories.h  MaxHeap.h  MaxWindowsVersion.h  Noncopyable.h  PB2Export.h  ParamDimension.h  Path.h  PodTypeCheck.h  ProductDefaults.h  ProductFileSupport.h  RendType.h  RollupConstants.h  SysNodeContext.h  TabTypes.h  TrackFlags.h  TrackHitRecord.h  WindowsDefines.h  actiontable.h  actiontableTypedefs.h  animtbl.h  appio.h  assert1.h  autoptr.h  baseinterface.h  buildnumber.h  (+49 more)
tools/3ds-max-plugin/lib/3ds_max_sdk_2023/: Paramblk2.lib  core.lib  maxutil.lib
tools/3ds-max-plugin/sources/: animation_exporter.cpp  bone_data_exporter.cpp  class_desc.cpp  dll_main.cpp  exporter.cpp  mesh_exporter.cpp  plugin.cpp  resource.rc  result_checker.cpp  skeleton_exporter.cpp  skin_exporter.cpp  utility.cpp  version.rc
tools/3ds-max-plugin/src/: class_desc.cpp  dll_main.cpp  plugin.cpp  plugin.def  resource.aps  resource.rc  utility.cpp
tools/editor/: editor.sln  editor.slnx  editor.vcxproj  editor.vcxproj.filters
tools/editor/editor-assets/fonts/: avicons.sfd
tools/editor/hlsl/: blit.ps  blit.vs  hello_triangle.ps.hlsl  hello_triangle.vs  hello_triangle_ext.vs.hlsl
tools/editor/include/: action.hpp  actor.hpp  append_ui_child_element_event.hpp  blit_descriptor_set_layout.hpp  blit_program.hpp  blit_program.inc  camera_component.hpp  command_line.hpp  component.hpp  crash_dump.hpp  cursor.hpp  div_ui_element.hpp  editor.hpp  glyphs.hpp  hello_triangle_program.hpp  hello_triangle_program.inc  hello_triangle_program_ext.hpp  hello_triangle_vertex.hpp  history.hpp  image_ui_element.hpp  keyboard_key_event.hpp  keys.hpp  main_window.hpp  message.hpp  message_queue.hpp  mouse_button_event.hpp  mouse_key_event.hpp  mouse_move_event.hpp  os_utils.hpp  point_light_component.hpp  prepend_ui_child_element_event.hpp  rect.hpp  reflection_component.hpp  render_session.hpp  rigid_body_component.hpp  save_state.hpp  script_component.hpp  set_text_event.hpp  skeletal_mesh_component.hpp  sound_emitter_component.hpp  (+20 more)
tools/editor/scripts/: make-symlink.ps1  make-symlinks.ps1  prepare-environment.ps1
tools/editor/src/: action.cpp  actor.cpp  append_ui_child_element_event.cpp  blit_descriptor_set_layout.cpp  blit_program.cpp  camera_component.cpp  component.cpp  component_registry.cpp  crash_dump.cpp  div_ui_element.cpp  editor.cpp  hello_triangle_program.cpp  hello_triangle_program_ext.cpp  history.cpp  keyboard_key_event.cpp  keys.cpp  main.cpp  main.rc  main_window.cpp  message_queue.cpp  os_utils.cpp  point_light_component.cpp  prepend_ui_child_element_event.cpp  rect.cpp  reflection_component.cpp  render_session.cpp  rigid_body_component.cpp  save_state.cpp  script_component.cpp  set_text_event.cpp  skeletal_mesh_component.cpp  sound_emitter_component.cpp  static_mesh_component.cpp  text_ui_element.cpp  timer.cpp  timer_manager.cpp  transform_component.cpp  ui_check_box.cpp  ui_checkbox.cpp  ui_close_button.cpp  (+11 more)
tools/html-validator/: CMakeLists.txt
tools/html-validator/include/: version.h  version.hpp
tools/html-validator/sources/: main.cpp
tools/html-validator/sources/windows/: version.rc
tools/ideas/: repacker.cpp  skin_tbn_tools.cpp  tbn64.cpp
(+2095 files in other folders)
